[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/gameover.gd" type="Script" id=1]
[ext_resource path="res://resources/silkscreen.fnt" type="BitmapFont" id=2]

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="label_title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 273.0
margin/bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "To be continued..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_message" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 260.0
margin/right = 273.0
margin/bottom = 291.0
custom_fonts/font = ExtResource( 2 )
text = "Try for a perfect!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_control" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 287.0
margin/right = 273.0
margin/bottom = 318.0
custom_fonts/font = ExtResource( 2 )
text = "> Z to start over"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


